--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@playwright/test": "^1.21.0",
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "next",
+    "@types/node": "^18.0.3",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
     "autoprefixer": "^10.4.7",
@@ -31,8 +32,14 @@
     "svelte-check": "^2.2.6",
     "svelte-preprocess": "^4.10.1",
     "tailwindcss": "^3.0.24",
+    "ts-node": "^10.8.2",
     "tslib": "^2.3.1",
     "typescript": "~4.6.2"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@prisma/client": "^3.13.0",
+    "daisyui": "^2.19.0",
+    "theme-change": "^2.1.0"
+  }
 }
